# Protos_can_bootloader

./: .gitignore  .gitmodules  CMakeLists.txt  STM32G431KBTx_FLASH.ld
App/: Bootloader.hpp  app_config.hpp  main_app.cpp
Core/Inc/: main.h
Core/Src/: main.c  stm32g4xx_it.c  tim.c
Ext_libs/flash_driver/: cpu.cpp
Libs/flash_driver/: flash.cpp  flash_driver.h
Libs/sa_stm32_g4/: adc.hpp  dac.hpp  eeprom.cpp  eeprom.hpp  eeprom_24aa02uid.hpp  i2c.hpp  i2c_driver.h  i2c_result.h  sht31.hpp  tim_ICmode.hpp
